[package]
name = "www-service"
version = "0.1.0"
authors = ["nbari <nbari@tequila.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
built = { version = "0.4", features = ["git2"] }
chrono = "0.4"
clap = "2.33"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[build-dependencies]
built = "0.4"
